--- a/config/locales/ru-RU.yml
+++ b/config/locales/ru-RU.yml
@@ -9,7 +9,7 @@ ru-RU:
     ext_static_content_new_page: "Новая страница"
     ext_static_content_editing_page: "Редактирование страницы"
     ext_static_content_foreign_link: "Внешняя ссылка (URL)"
-    ext_static_content_show_in_sidebar: ""Отображать в боковом меню"
+    ext_static_content_show_in_sidebar: "Отображать в боковом меню"
     ext_static_content_show_in_header: "Отображать в верхнем меню"
     ext_static_content_show_in_footer: "Отображать в нижнем меню"
     ext_static_content_position: "Позиция в меню"
